# aml_nba_ass1

./: .gitignore  ASSIGNMENT_SUBMISSION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.backup  Makefile  PACKAGE_SUMMARY.md  README.md  environment.yml  example_usage.py  pixi.toml  pyproject.toml  setup.py
.github/workflows/: test-and-publish.yml
docs/: __init__.py  dataset.py  features.py  plots.py
docs/modeling/: predict.py  train.py
notebooks/: 36120-25SP-AT1-group_26-25587799-experiment.ipynb  36120-25SP-AT1-group_26-25587799-experiment_2.ipynb  36120-25SP-AT2-25587799-experiment-1.ipynb  36120-25SP-AT2-25587799-rain_experiment-1.ipynb  example_classification_usage.ipynb  example_regression_usage.ipynb  library_usage_demo.ipynb  test_library_import.ipynb  weather_data_processor_example.ipynb
src/brayam_pineda_ml/: __init__.py  data_loader.py  evaluator.py  model_trainer.py  predictor.py  utils.py  weather_data_processor.py
tests/: __init__.py  test_data.py  test_data_loader.py  test_utils.py
