[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brayam-pineda-ml"
version = "0.1.0"
description = "Machine Learning package for NBA draft prediction using LightGBM"
authors = [
    { name = "Brayam Alexander Pineda", email = "brayam.pineda@student.uts.edu.au" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11.4"
dependencies = [
    "scikit-learn==1.5.1",
    "pandas==2.2.2",
    "numpy>=1.24.0",
    "lightgbm==4.4.0",
    "joblib==1.4.2",
    "xgboost==2.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "hyperopt==0.2.7",
    "lime==0.2.0.1",
    "wandb==0.17.4",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "jupyterlab==4.2.3",
    "ipykernel>=6.0.0",
    "notebook>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/brayam-pineda-ml"
Repository = "https://github.com/yourusername/brayam-pineda-ml"
Documentation = "https://github.com/yourusername/brayam-pineda-ml#readme"
Issues = "https://github.com/yourusername/brayam-pineda-ml/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"brayam_pineda_ml" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=brayam_pineda_ml",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "hyperopt.*",
    "wandb.*",
    "lime.*",
]
ignore_missing_imports = true

